crates/executor/src/tests/sql/commands/snapshots/top/query_top_in_cte.snap
---
source: crates/executor/src/tests/sql/commands/top.rs
description: "\"WITH cte AS (SELECT TOP 2 c1 FROM testtable ORDER BY c1) SELECT * FROM cte ORDER BY c1\""
info: "Setup queries: CREATE OR REPLACE TABLE testtable (c1 STRING); INSERT INTO testtable (c1) VALUES ('1'), ('2'), ('3'), ('20'), ('19'), ('18'), ('1'), ('2'), ('3'), ('4'), (NULL), ('30'), (NULL)"
---
Ok(
    [
        "+----+",
        "| c1 |",
        "+----+",
        "| 1  |",
        "| 1  |",
        "+----+",
    ],
)
