crates/executor/src/tests/sql/commands/snapshots/top/query_top_in_subquery.snap
---
source: crates/executor/src/tests/sql/commands/top.rs
description: "\"SELECT c1 FROM (SELECT TOP 3 c1 FROM testtable ORDER BY c1) sub ORDER BY c1 DESC\""
info: "Setup queries: CREATE OR REPLACE TABLE testtable (c1 STRING); INSERT INTO testtable (c1) VALUES ('1'), ('2'), ('3'), ('20'), ('19'), ('18'), ('1'), ('2'), ('3'), ('4'), (NULL), ('30'), (NULL)"
---
Ok(
    [
        "+----+",
        "| c1 |",
        "+----+",
        "| 18 |",
        "| 1  |",
        "| 1  |",
        "+----+",
    ],
)
